Fix double scrollbars in caselog
Make the min-height taller so that all of the caselog book will show
when the browser size is too small.

--- a/apps/lab/resources/css/caselog.css
+++ b/apps/lab/resources/css/caselog.css
@@ -6,6 +6,7 @@
 .caselog-view {
   background: static_url('caselog-bg.jpg') center top no-repeat;
   color: #492222;
+  overflow: hidden;
 }
 
 #caselog-wrap {
